# AGV-Mapping

./: .gitignore  README.md
agv_mapping_test/: pids
catkin_ws/: .gitignore
catkin_ws/scripts/: check_lego_roll_pitch.py  lilygo_ble_probe.py  lilygo_ble_tcp_bridge.py  lilygo_probe.jsonl  lilygo_tcp_bridge.jsonl  monitor_metadata_csv.py  save_accumulated_map.sh  start_lidar_mapping.sh  stop_lidar_mapping.sh  view_latest_pcd.sh  view_realsense.sh  view_rgb_camera.sh
catkin_ws/src/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
catkin_ws/src/LeGO-LOAM/LeGO-LOAM/launch/: run.launch
catkin_ws/src/LeGO-LOAM/LeGO-LOAM/src/: featureAssociation.cpp  mapOptmization.cpp  transformFusion.cpp
catkin_ws/src/realsense/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
catkin_ws/src/rviz_navi_multi_goals_pub_plugin/navi_multi_goals_pub_rviz_plugin/src/: multi_navi_goal_panel.cpp  multi_navi_goal_panel.h
catkin_ws/src/scout_base/scout_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/scout_base/scout_bringup/launch/: navigation_4wd.launch  open_rslidar.launch  pointcloud_mapping.launch
catkin_ws/src/scout_base/scout_bringup/rviz/: pointcloud_mapping.rviz
catkin_ws/src/scout_base/scout_bringup/scripts/: run_pointcloud_mapping.sh
catkin_ws/src/scout_base/scout_description/param/4wd/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/scout_pointcloud_accumulator/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/scout_pointcloud_accumulator/launch/: accumulate.launch  mapping_metadata.launch  realsense_mapping.launch
catkin_ws/src/scout_pointcloud_accumulator/rviz/: accum.rviz
catkin_ws/src/scout_pointcloud_accumulator/scripts/: mapping_metadata_logger.py  static_transform_rpy.py
catkin_ws/src/scout_pointcloud_accumulator/src/: accumulator.cpp
catkin_ws/src/velodyne/velodyne_pointcloud/launch/: VLP16_points.launch
catkin_ws/src/velodyne/velodyne_pointcloud/rviz/: velodyne.rviz
datos/: metadata.csv
datos/sesion_20260625_121426/: .~lock.trayectoria_gps_doback.csv#  doback.csv  doback_raw.csv  gps.csv  gps_raw.jsonl  manifest.json  trayectoria_gps_doback.csv
datos/sesion_20260625_121619/: doback.csv  doback_raw.csv  gps.csv  gps_raw.jsonl  manifest.json  trayectoria_gps_doback.csv
maps/: map_20260617_193357_camera.pcd  map_20260617_193357_fused.pcd  map_20260617_193357_lidar.pcd  map_20260617_193605_camera.pcd  map_20260617_193605_fused.pcd  map_20260617_193605_lidar.pcd  map_20260617_193736_camera.pcd  map_20260617_193736_fused.pcd  map_20260617_193736_lidar.pcd  map_20260617_193934_camera.pcd  map_20260617_193934_fused.pcd  map_20260617_193934_lidar.pcd  map_20260617_194126_camera.pcd  map_20260617_194126_fused.pcd  map_20260617_194126_lidar.pcd  map_20260617_194330_camera.pcd  map_20260617_194330_fused.pcd  map_20260617_194330_lidar.pcd  map_20260617_194442_camera.pcd  map_20260617_194442_fused.pcd  map_20260617_194442_lidar.pcd  map_20260617_194550_camera.pcd  map_20260617_194550_fused.pcd  map_20260617_194550_lidar.pcd  map_20260617_194719_camera.pcd  map_20260617_194719_fused.pcd  map_20260617_194719_lidar.pcd  map_20260617_194852_camera.pcd  map_20260617_194852_fused.pcd  map_20260617_194852_lidar.pcd
omx_wiki/: guia-readme-principal.md  index.md  log.md
